<resources>
    <string name="app_name">RealApplication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string> <!-- Button label for green button -->
    <string name="green_button">Green</string> <!-- Button label for red button -->
    <string name="red_button">Red</string> <!-- Button label for black button -->
    <string name="black_button">Black</string> <!-- Default string for count textview -->
    <string name="default_count">0</string>
    <!-- Button label for Count button -->
    <string name="count_button">Count</string> <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="cancel_me">Cancel me</string>
    <string name="ok">OK</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>
