<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:actualImageScaleType="focusCrop"
            app:fadeDuration="300"
            app:failureImage="@drawable/ic_image_failed"
            app:failureImageScaleType="centerInside"
            app:layout_constraintRight_toLeftOf="@+id/view_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progressBarAutoRotateInterval="1000"
            app:progressBarImage="@drawable/ic_loading"
            app:progressBarImageScaleType="centerInside"
            app:roundAsCircle="true"
            app:roundedCornerRadius="1dp" />

        <LinearLayout
            android:id="@+id/view_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/img_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toTopOf="@+id/img_user">

            <TextView
                android:id="@+id/txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delete"
            app:layout_constraintRight_toLeftOf="@+id/btn_edit"
            app:layout_constraintTop_toBottomOf="@+id/img_user" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>